chore: fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,6 @@ html, body, #root {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 
 .app-container {
